Name:               aima-haskell
Version:            0.1
Synopsis:           Artificial Intelligence: A Modern Approach
Description:        Implementation of algorithms in Russell and Norvig's AIMA
License:            OtherLicense
License-File:       LICENSE
Author:             Chris Taylor
Maintainer:         Chris Taylor
Stability:          Experimental
Homepage:           https://github.com/chris-taylor/aima-haskell
Cabal-Version:      >= 1.8
Build-Type:         Simple
Category:           Language

Extra-Source-Files: README.md
                    LICENSE

Data-Files:         data/problems_small.txt
                    data/problems_large.txt

Source-Repository head
    Type:           git
    Location:       git://github.com/chris-taylor/aima-haskell.git

Library                 
    Extensions:         MultiParamTypeClasses
    Hs-Source-Dirs:     src
    GHC-Options:        -O2
    GHC-Prof-Options:   -O2 -auto-all
    Build-Depends:      base >= 2,
                        containers,
                        random,
                        stm,
                        deepseq,
                        mtl,
                        text,
                        parsec,
                        MonadRandom,
                        array,
                        gnuplot,
                        hmatrix,
                        QuickCheck
    Exposed-Modules:    AI.Core.Agents
                        AI.Search.Core
                        AI.Search.Uninformed
                        AI.Search.Informed
                        AI.Search.Local
                        AI.Search.Adversarial
                        AI.Search.CSP
                        AI.Search.Example.Chess
                        AI.Search.Example.Connect4
                        AI.Search.Example.Fig52Game
                        AI.Search.Example.Graph
                        AI.Search.Example.MapColoring
                        AI.Search.Example.NQueens
                        AI.Search.Example.Sudoku
                        AI.Search.Example.TicTacToe
                        AI.Logic.Core
                        AI.Logic.Interactive
                        AI.Logic.Propositional
                        AI.Logic.FOL
                        AI.Probability.Bayes
                        AI.Probability.MDP
                        AI.Probability.Example.Alarm
                        AI.Probability.Example.Grass
                        AI.Learning.Core
                        AI.Learning.DecisionTree
                        AI.Learning.LinearRegression
                        AI.Learning.LogisticRegression
                        AI.Learning.NeuralNetwork
                        AI.Learning.RandomForest
                        AI.Learning.Resample
                        AI.Learning.Example.Students
                        AI.Learning.Example.Restaurant
                        AI.Test.Main
                        AI.Test.Learning.LinearRegression
                        AI.Test.Util
                        AI.Util.Array
                        AI.Util.Graph
                        AI.Util.Matrix
                        AI.Util.ProbDist
                        AI.Util.Queue
                        AI.Util.Table
                        AI.Util.Util
                        AI.Util.WeightedGraph


